# AOC_2023

./: .gitignore
challenges/01/: pyproject.toml
challenges/01/data/input/: test_1  test_3
challenges/01/src/: part_1.py  part_2.py
challenges/02/: pyproject.toml
challenges/02/src/: main.py  models.py  part_1.py  part_2.py
challenges/03/: pyproject.toml
challenges/03/src/: models.py  part_1.py  part_2.py
challenges/04/: pyproject.toml
challenges/04/src/: models.py  part_1.py  part_2.py
challenges/05/: pyproject.toml
challenges/05/src/: main.py
challenges/05/src/part_1/: models.py  processing.py
challenges/05/src/part_2/: models.py  processing.py
challenges/06/: pyproject.toml
challenges/06/src/part_1/: models.py  processing.py
challenges/06/src/part_2/: processing.py
challenges/07/: pyproject.toml
challenges/07/src/part_1/: models.py  processing.py
challenges/07/src/part_2/: models.py  processing.py
challenges/08/: pyproject.toml
challenges/08/data/input/: test_3
challenges/08/src/: main.py
challenges/08/src/part_1/: models.py  processing.py
challenges/08/src/part_2/: processing.py
challenges/09/: pyproject.toml
challenges/09/src/part_1/: models.py  processing.py
challenges/09/src/part_2/: models.py  processing.py
challenges/10/: pyproject.toml
challenges/10/src/part_1/: models.py  processing.py
challenges/10/src/part_2/: models.py  processing.py
challenges/11/: pyproject.toml
challenges/11/src/part_1/: models.py  processing.py
challenges/11/src/part_2/: models.py  processing.py
challenges/template/: pyproject.toml
challenges/template/src/: config.py  main.py  part_2.py
challenges/template/src/part_1/: models.py
challenges/template/src/part_2/: processing.py
common/file_management/: __init__.py  read_and_write.py
